--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div id="mainWrap">
 
 	<header>
-  <img src="http://fillmurray.com/700/200" alt="Logo">
+
+	<h1>LOGO</h1>
 </header>
 
 	<main>
