--- a/index.html
+++ b/index.html
@@ -38,20 +38,22 @@
 
 	<header>
 
-	<h1>LOGO</h1>
+	<h1><img src="../assets/theme/img/blaserHead_500px.svg" alt="Blaser System Logo"></h1>
 </header>
 
 	<main>
 		<section>
-			<img src="http://fillmurray.com/700/700" alt="Neu Gif">		
+			<img src="../assets/theme/img/NeuBlaser_Teaser.svg" alt="Neu Blaser System Teaser Bild">		
 		</section>
 		<section>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus eius cupiditate odit quis modi dolorum, nesciunt saepe atque neque quidem sit blanditiis dolorem numquam, maxime at a itaque molestias labore.
+				Seit mehr als fünfzig Jahren produzieren wir in Burgdorf robuste und langlebige Sitz- und Liegesysteme von höchster Qualität. Nach dem Motto „Bewährtes erhalten, Neues gestalten“ werden wir nun unser etabliertes Angebot weiter ausbauen. Seien Sie mit dabei, wenn wir Ihnen im Herbst unsere Vision für die Zukunft vorstellen!
 			</p>
-			<div id="Countdown">
-				<p>Countdown</p>
-			</div>
+			
+			<p> 
+				Nur noch <span id="Countdown"></span> bis zur Fachmesse für den Gesundheitsmarkt IFAS. Besuchen Sie uns in der Halle 6, am Stand 130.
+			</p>
+			
 			<div id="accordeon">
 				<div id="newsletter">
 					<a class="toggle" href="#newsletterForm">
@@ -70,7 +72,8 @@
 	</main>
 
 	<footer>
-  <h4>footer</h4>
+  <h4>W. Blaser AG</h4>
+  <p>Einschlagweg 29, 3400 Burgdorf, Telefon 034 422 12 72</p>
 </footer>
 
 </div><!-- end #mainWrap -->
